--- a/public/styles/pages/cart.css
+++ b/public/styles/pages/cart.css
@@ -67,12 +67,14 @@ que el resto se expanda de manera responsive. */
 .cart-item__name {
   font-size: var(--font-size-14px);
   font-weight: 700;
+  text-transform: uppercase;
 }
 
 .cart-item__license {
   font-size: var(--font-size-12px);
   font-weight: 500;
   color: var(--background-oscuro);
+  text-transform: uppercase;
 }
 
 .cart-item__price {
@@ -92,6 +94,7 @@ que el resto se expanda de manera responsive. */
   text-align: center;
   font-weight: 700;
   font-size: var(--font-size-16px);
+  border: 1px solid var(--background-oscuro);
 }
 .cart-item__button--content {
   display: flex;
@@ -119,12 +122,29 @@ que el resto se expanda de manera responsive. */
 }
 
 .cart-item__close {
-  font-size: var(--font-size-18px);
+  font-size: var(--font-size-20px);
   padding: var(--spacing-4);
+  border: none;
+  background-color: rgba(0, 0, 0, 0);
   color: rgb(242, 78, 30);
   position: absolute;
   right: 0;
   top: 0;
+}
+
+.cart-item__empty {
+  background-color: var(--background-claro);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  border-radius: 1rem;
+  box-shadow: 0px 0px 10px 0px #00000040;
+  font-size: var(--font-size-12px);
+  font-weight: 500;
+  color: var(--background-oscuro);
+  text-transform: uppercase;
+  padding: var(--spacing-36) var(--spacing-4);
 }
 
 /* ----- RESUMEN ----- */
@@ -282,12 +302,14 @@ dejo que el resto se coloque de manera responsive. */
   .cart-item__name {
     font-size: var(--font-size-18px);
     /* font-weight: 700; */
+    /* text-transform: uppercase; */
   }
   
   /* .cart-item__license {
     font-size: var(--font-size-12px);
     font-weight: 500;
     color: var(--background-oscuro);
+    text-transform: uppercase;
   } */
   
   .cart-item__price {
@@ -308,6 +330,7 @@ dejo que el resto se coloque de manera responsive. */
     /* text-align: center; */
     /* font-weight: 700; */
     /* font-size: var(--font-size-16px); */
+    /* border: 1px solid var(--background-oscuro); */
   }
   
   /* .cart-item__button--content {
@@ -336,11 +359,18 @@ dejo que el resto se coloque de manera responsive. */
   }
   
   .cart-item__close {
-    font-size: var(--font-size-20px);
+    font-size: var(--font-size-22px);
     padding: var(--spacing-8);
+    /* border: none; */
+    /* background-color: rgba(0, 0, 0, 0); */
     /* color: rgb(242, 78, 30); */
     position: static;
     cursor: pointer;
+  }
+
+  .cart-item__empty {
+    font-size: var(--font-size-14px);
+    padding: var(--spacing-42) var(--spacing-4);
   }
   
   /* ----- RESUMEN ----- */
@@ -516,12 +546,14 @@ dejo que el resto se coloque de manera responsive. */
   .cart-item__name {
     font-size: var(--font-size-24px);
     /* font-weight: 700; */
+    /* text-transform: uppercase; */
   }
 
   .cart-item__license {
     font-size: var(--font-size-14px);
     /* font-weight: 500; */
     /* color: var(--background-oscuro); */
+    /* text-transform: uppercase; */
   }
 
   .cart-item__price {
@@ -542,6 +574,7 @@ dejo que el resto se coloque de manera responsive. */
     /* text-align: center; */
     /* font-weight: 700; */
     font-size: var(--font-size-20px);
+    /* border: 1px solid var(--background-oscuro); */
   }
 
   /* .cart-item__button--content {
@@ -574,11 +607,18 @@ dejo que el resto se coloque de manera responsive. */
   }
 
   .cart-item__close {
-    /* font-size: var(--font-size-20px); */
+    font-size: var(--font-size-28px);
     padding: var(--spacing-12);
+    /* border: none; */
+    /* background-color: rgba(0, 0, 0, 0); */
     /* color: rgb(242, 78, 30); */
     /* position: static; */
     /* cursor: pointer; */
+  }
+
+  .cart-item__empty {
+    font-size: var(--font-size-16px);
+    padding: var(--spacing-48) var(--spacing-4);
   }
 
   /* ----- RESUMEN ----- */
