--- a/src/views/shop/cart.ejs
+++ b/src/views/shop/cart.ejs
@@ -11,78 +11,63 @@
         </div>
 
         <ul class="carrito__list">
-          <li class="carrito__item">
+          <% 
+          totalQuantity = 0;
+          totalPrice = 0;
+          shipping = 0;
+          if (locals.cartItems && (locals.cartItems.length > 0)) {            
+            cartItems = locals.cartItems;
+            cartItems.forEach((cartItem, index) => {
+              item = items.find(product => product.product_id === cartItem.id);
+              totalQuantity += cartItem.quantity;
+              totalPrice += cartItem.quantity * item.price;
+              shipping = 500.00; %>
+          <li class="carrito__item" id="item-<%= item.product_id %>">
             <article class="cart-item">
               <div class="cart-item__content">
                 <picture class="cart-item__img">
                   <img
-                    src="/img/star-wars/baby-yoda-1.webp"
-                    alt="Baby Yoda Blueball"
+                    src="<%= item.image_front %>"
+                    alt="<%= item.product_description %>"
                   />
                 </picture>
 
                 <div class="cart-item__detail">
-                  <h3 class="cart-item__name">BABY YODA BLUEBALL</h3>
-                  <p class="cart-item__license">STAR WARS</p>
+                  <h3 class="cart-item__name"><%= item.product_name %></h3>
+                  <p class="cart-item__license"><%= item.licence_name %></p>
                   <p class="cart-item__price">
-                    Precio unitario: $ <span class="value__item">1799.99</span>
+                    Precio unitario: $ <span class="value__item"><%= item.price %></span>
                   </p>
                 </div>
               </div>
 
               <div class="cart-item__cantidad">
-                <input class="cart-item__quantity quantity" type="text" name="quantity" placeholder="0" />
+                <input class="cart-item__quantity" type="text" name="quantity" id="quantity-<%= index %>" placeholder="0" value="<%= cartItem.quantity %>" />
                 <div class="cart-item__button--content">
-                  <input class="cart-item__button add" type="button" name="add" value="+" />
-                  <input class="cart-item__button subtract" type="button" name="subtract" value="-" />
+                  <button class="cart-item__button" type="button" onclick="quantityUpdate('<%= cartItem.id %>', 1)" id="add-<%= index %>">+</button>
+                  <button class="cart-item__button" type="button" onclick="quantityUpdate('<%= cartItem.id %>', -1)" id="subtract-<%= index %>">-</button>
                 </div>
               </div>
 
               <p class="cart-item__total">
-                $ <span class="value__total">1799.99</span>
+                $ <span class="value__total"><%= cartItem.quantity * item.price %></span>
               </p>
 
-              <iconify-icon
-                class="cart-item__close"
-                icon="zondicons:close-outline"
-              ></iconify-icon>
+              <form action="/shop/cart/<%= cartItem.id %>?_method=DELETE" method="POST" enctype="application/json">
+                <button class="cart-item__close" type="submit">
+                  <iconify-icon icon="zondicons:close-outline"></iconify-icon>
+                </button>
+              </form>
             </article>
           </li>
-
-          <li>
-            <article class="cart-item">
-              <div class="cart-item__content">
-                <picture class="cart-item__img">
-                  <img src="/img/pokemon/pidgeotto-1.webp" alt="Pidgeotto" />
-                </picture>
-
-                <div class="cart-item__detail">
-                  <h3 class="cart-item__name">PIDGEOTTO</h3>
-                  <p class="cart-item__license">POKEMON</p>
-                  <p class="cart-item__price">
-                    Precio unitario: $ <span class="value__item">1799.99</span>
-                  </p>
-                </div>
-              </div>
-
-              <div class="cart-item__cantidad">
-                <input class="cart-item__quantity quantity" type="text" name="quantity" placeholder="0" />
-                <div class="cart-item__button--content">
-                  <input class="cart-item__button add" type="button" name="add" value="+" />
-                  <input class="cart-item__button subtract" type="button" name="subtract" value="-" />
-                </div>
-              </div>
-
-              <p class="cart-item__total">
-                $ <span class="value__total">1799.99</span>
-              </p>
-
-              <iconify-icon
-                class="cart-item__close"
-                icon="zondicons:close-outline"
-              ></iconify-icon>
-            </article>
+          <% });
+          } else { %>          
+          <li class="carrito__item--empty">
+              <article class="cart-item__empty">
+                <p> Su carrito se encuentra vacío</p>
+              </article>
           </li>
+        <% }; %>
         </ul>
       </section>
 
@@ -92,21 +77,21 @@
         <article class="resumen__content">
           <div class="resumen__div">
             <p class="resumen__detail">CANTIDAD DE ELEMENTOS</p>
-            <p class="resumen__value"><span class="resumen_cantidad">2</span></p>
+            <p class="resumen__value"><span class="resumen_cantidad"><%= totalQuantity %></span></p>
           </div>
           <div class="resumen__div">
             <p class="resumen__detail">SUBTOTAL</p>
             <p class="resumen__value">
-              $ <span class="resumen_subtotal">3599.98</span>
+              $ <span class="resumen_subtotal"><%= totalPrice %></span>
             </p>
           </div>
           <div class="resumen__div">
             <p class="resumen__detail">ENVIO</p>
-            <p class="resumen__value">$ <span class="resumen_envio">500.00</span></p>
+            <p class="resumen__value">$ <span class="resumen_envio"><%= shipping %></span></p>
           </div>
           <div class="resumen__div resumen__total">
             <p class="resumen__detail">TOTAL</p>
-            <p class="resumen__value">$ <span class="resumen_total">4099.98</span></p>
+            <p class="resumen__value">$ <span class="resumen_total"></span><%= totalPrice + shipping %></p>
           </div>
         </article>
 
@@ -117,6 +102,7 @@
     <%- include ('../partials/footer.ejs') %>
 
     <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+    <script src="/scripts/cart.js"></script>
     <script src="/scripts/menu.js"></script>
   </body>
 </html>
