[FEAT] Se pueden comprar los items y se vacía el carrito, esto tiene validaciones de si estas loggeado y si el carrito no está vacío. Corregí un detalle en el input dentro de la página item para que solo se pueda manipular con los botones. Modifiqué el readme.

--- a/public/styles/pages/cart.css
+++ b/public/styles/pages/cart.css
@@ -135,8 +135,10 @@ que el resto se expanda de manera responsive. */
 .cart-item__empty {
   background-color: var(--background-claro);
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: var(--spacing-10);
   position: relative;
   border-radius: 1rem;
   box-shadow: 0px 0px 10px 0px #00000040;
@@ -145,6 +147,11 @@ que el resto se expanda de manera responsive. */
   color: var(--background-oscuro);
   text-transform: uppercase;
   padding: var(--spacing-36) var(--spacing-4);
+}
+
+.cart-item__empty--link {
+  color: var(--color-primario);
+  border-bottom: 1px solid var(--color-primario);
 }
 
 /* ----- RESUMEN ----- */
