--- a/src/views/error404.ejs
+++ b/src/views/error404.ejs
@@ -3,7 +3,7 @@
     <main class="item__page">
       <section class="item container">
         <picture class="error__img">
-          <img class="card-item__img--front" src="/img/spiderman-404.png" alt="Spiderman error 404 not found." />
+          <img class="card-item__img--front" src="/img/spiderman-error.png" alt="Spiderman error 404 not found." />
         </picture>
 
         <article class="item__content">
