--- a/src/views/shop/item.ejs
+++ b/src/views/shop/item.ejs
@@ -36,7 +36,7 @@
       <% } else { %>
         <section class="item container">
           <picture class="error__img">
-            <img class="card-item__img--front" src="/img/spiderman-404.png" alt="Spiderman error." />
+            <img class="card-item__img--front" src="/img/spiderman-error.png" alt="Spiderman error item no encontrado." />
           </picture>
   
           <article class="item__content">
