--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -18,7 +18,7 @@
             Disfruta de una saga que sigue agregando personajes a su colección.
           </p>
           <div class="colecciones__line"></div>
-          <a class="colecciones__link" href="/shop?filter=starwars">VER COLECCIÓN</a>
+          <a class="colecciones__link" href="/shop?search=starwars">VER COLECCIÓN</a>
         </article>
 
         <picture class="colecciones__img">
@@ -34,7 +34,7 @@
             amigos
           </p>
           <div class="colecciones__line"></div>
-          <a class="colecciones__link" href="/shop?filter=pokemon">VER COLECCIÓN</a>
+          <a class="colecciones__link" href="/shop?search=pokemon">VER COLECCIÓN</a>
         </article>
 
         <picture class="colecciones__img">
@@ -49,7 +49,7 @@
             Revive los recuerdos de una saga llena de magia y encanto
           </p>
           <div class="colecciones__line"></div>
-          <a class="colecciones__link" href="/shop?filter=harrypotter">VER COLECCIÓN</a>
+          <a class="colecciones__link" href="/shop?search=harrypotter">VER COLECCIÓN</a>
         </article>
 
         <picture class="colecciones__img">
