--- a/src/views/shop/shop.ejs
+++ b/src/views/shop/shop.ejs
@@ -3,117 +3,156 @@
     <div class="shop__container">
       <div class="shop__content container">
         <aside class="filter">
-          <div class="filter__content">
-            <label class="filter__title" for="search">BUSCAR</label>
-            <input
-              class="filter__search"
-              type="text"
-              name="search"
-              id="search"
-              placeholder="ítem o categoría"
-            />
-            <label class="filter__search--icon" for="search">
-              <img
-                src="/img/icons/search_icon.svg"
-                alt="Ícono de búsqueda"
-              />
-            </label>
-
-            <a class="filter__button">
-              Filtros
-              <iconify-icon class="filter__button--icon" icon="ion:chevron-down-outline"></iconify-icon>
-            </a>
-          </div>
-
-          <div class="filter__content--desplegable">
+          <form action="/shop" method="GET">
             <div class="filter__content">
-              <label class="filter__title" for="order">ORDENAR POR</label>
-              <select class="filter__order" name="order" id="order">
-                <option value="mayor">Mayor a menor</option>
-                <option value="menor">Menor a mayor</option>
-              </select>
+              <label class="filter__title" for="search">BUSCAR</label>
+              <input
+                class="filter__search"
+                type="text"
+                name="search"
+                id="search"
+                placeholder="Producto o licencia"
+              />
+              <label class="filter__search--icon" for="search">
+                <img
+                  src="/img/icons/search_icon.svg"
+                  alt="Ícono de búsqueda"
+                />
+              </label>
+
+              <a class="filter__button">
+                Filtros
+                <iconify-icon class="filter__button--icon" icon="ion:chevron-down-outline"></iconify-icon>
+              </a>
             </div>
 
-            <div class="filter__content">
-              <h2 class="filter__title">PRECIO</h2>
-              <div class="filter__content--price">
-                <label class="filter__label" for="min">MIN</label>
-                <input
-                  class="filter__price"
-                  type="number"
-                  name="min"
-                  id="min"
-                  placeholder="0"
-                />
-                <p class="filter__price--divisor">-</p>
-                <label class="filter__label" for="max">MAX</label>
-                <input
-                  class="filter__price"
-                  type="number"
-                  name="max"
-                  id="max"
-                  placeholder="0"
-                />
+            <div class="filter__content--desplegable">
+              <div class="filter__content">
+                <label class="filter__title" for="order">ORDENAR POR</label>
+                <select class="filter__order" name="order" id="order">
+                  <option value="todos">Todos</option>
+                  <option value="funkos">Funkos</option>
+                  <option value="remeras">Remeras</option>
+                  <option value="llaveros">Llaveros</option>
+                </select>
+              </div>
+
+              <div class="filter__content">
+                <h2 class="filter__title">PRECIO</h2>
+                <div class="filter__content--price">
+                  <label class="filter__label" for="min">MIN</label>
+                  <input
+                    class="filter__price"
+                    type="number"
+                    name="min"
+                    id="min"
+                    min="0"
+                    max="99999"
+                    step="1000"
+                    placeholder="0"
+                  />
+                  <p class="filter__price--divisor">-</p>
+                  <label class="filter__label" for="max">MAX</label>
+                  <input
+                    class="filter__price"
+                    type="number"
+                    name="max"
+                    id="max"
+                    min="0"
+                    max="99999"
+                    step="1000"
+                    placeholder="0"
+                  />
+                </div>
+              </div>
+
+              <div class="filter__content">
+                <h2 class="filter__title">FILTRAR</h2>
+                <ul class="filter__list">
+                  <li class="filter__checkbox">
+                    <input
+                      class="filter__checkbox--input"
+                      type="checkbox"
+                      name="nuevos"
+                      id="nuevos"
+                    />
+                    <label class="filter__checkbox--label" for="nuevos"
+                      >NUEVOS</label
+                    >
+                  </li>
+
+                  <li class="filter__checkbox">
+                    <input
+                      class="filter__checkbox--input"
+                      type="checkbox"
+                      name="ofertas"
+                      id="ofertas"
+                    />
+                    <label class="filter__checkbox--label" for="ofertas">
+                      OFERTAS
+                    </label>
+                  </li>
+
+                  <li class="filter__checkbox">
+                    <input
+                      class="filter__checkbox--input"
+                      type="checkbox"
+                      name="especial"
+                      id="especial"
+                    />
+                    <label class="filter__checkbox--label" for="especial">
+                      EDICIÓN ESPECIAL
+                    </label>
+                  </li>
+                  <li class="filter__checkbox">
+                    <input
+                      class="filter__checkbox--input"
+                      type="checkbox"
+                      name="favoritos"
+                      id="favoritos"
+                    />
+                    <label class="filter__checkbox--label" for="favoritos">
+                      FAVORITOS
+                    </label>
+                  </li>
+                </ul>
               </div>
             </div>
-
-            <div class="filter__content">
-              <h2 class="filter__title">FILTRAR</h2>
-              <ul class="filter__list">
-                <li class="filter__checkbox">
-                  <input
-                    class="filter__checkbox--input"
-                    type="checkbox"
-                    name="nuevos"
-                    id="nuevos"
-                  />
-                  <label class="filter__checkbox--label" for="nuevos"
-                    >NUEVOS</label
-                  >
-                </li>
-
-                <li class="filter__checkbox">
-                  <input
-                    class="filter__checkbox--input"
-                    type="checkbox"
-                    name="ofertas"
-                    id="ofertas"
-                  />
-                  <label class="filter__checkbox--label" for="ofertas">
-                    OFERTAS
-                  </label>
-                </li>
-
-                <li class="filter__checkbox">
-                  <input
-                    class="filter__checkbox--input"
-                    type="checkbox"
-                    name="edicion-especial"
-                    id="edicion-especial"
-                  />
-                  <label class="filter__checkbox--label" for="edicion-especial">
-                    EDICIÓN ESPECIAL
-                  </label>
-                </li>
-                <li class="filter__checkbox">
-                  <input
-                    class="filter__checkbox--input"
-                    type="checkbox"
-                    name="favoritos"
-                    id="favoritos"
-                  />
-                  <label class="filter__checkbox--label" for="favoritos">
-                    FAVORITOS
-                  </label>
-                </li>
-              </ul>
-            </div>
-          </div>
+          </form>
         </aside>
 
         <main class="shop">
           <ul class="shop__list">
-            <% items.forEach(item => { %>
+            <% if (filteredItems.length > 0) {
+              filteredItems.forEach(item => { %>
+              <li class="shop__item">
+                <article class="card-item">
+                  <a class="card-item__link" href="/shop/item/<%= item.product_id %>">
+                    <picture class="card-item__img">
+                      <span class="card-item__tag">NUEVO</span>
+                      <img
+                        class="card-item__img--front"
+                        src="<%= item.image_front %>"
+                        alt="<%= item.product_description %>"
+                      />
+                      <img
+                        class="card-item__img--back"
+                        src="<%= item.image_back %>"
+                        alt="<%= item.product_description %> BOX"
+                      />
+                    </picture>
+                    <div class="card-item__content">
+                      <p class="card-item__license"><%= item.licence_name %></p>
+                      <h3 class="card-item__name"><%= item.product_name %></h3>
+                      <p class="card-item__price">$ <%= item.price %></p>
+                      <p class="card-item__offer"><%= item.dues %> CUOTAS SIN INTERÉS</p>
+                    </div>
+                  </a>
+                </article>
+              </li>
+            <% })
+            } else {
+              items.forEach(item => { %>
             <li class="shop__item">
               <article class="card-item">
                 <a class="card-item__link" href="/shop/item/<%= item.product_id %>">
@@ -139,7 +178,8 @@
                 </a>
               </article>
             </li>
-            <% }) %>
+            <% })
+            } %>
           </ul>
         </main>
       </div>
