--- a/src/views/shop/shop.ejs
+++ b/src/views/shop/shop.ejs
@@ -13,17 +13,17 @@
                 id="search"
                 placeholder="Producto o licencia"
               />
-              <label class="filter__search--icon" for="search">
+              <button class="filter__search--icon" type="submit">
                 <img
                   src="/img/icons/search_icon.svg"
                   alt="Ícono de búsqueda"
                 />
-              </label>
+              </button>
 
-              <a class="filter__button">
+              <p class="filter__button">
                 Filtros
                 <iconify-icon class="filter__button--icon" icon="ion:chevron-down-outline"></iconify-icon>
-              </a>
+              </p>
             </div>
 
             <div class="filter__content--desplegable">
