--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -28,3 +28,4 @@
 @import url(./pages/admin.css);
 @import url(./pages/create-edit.css);
 @import url(./pages/error404.css);
+@import url(./pages/contact.css);
