--- a/public/styles/misc/variables.css
+++ b/public/styles/misc/variables.css
@@ -35,6 +35,7 @@
   --font-size-34px: 3.4em;
   --font-size-30px: 3em;
   --font-size-28px: 2.8em;
+  --font-size-26px: 2.6em;
   --font-size-24px: 2.4em;
   --font-size-22px: 2.2em;
   --font-size-20px: 2em;
