--- a/public/styles/pages/cart.css
+++ b/public/styles/pages/cart.css
@@ -205,6 +205,7 @@ dejo que el resto se coloque de manera responsive. */
 }
 
 .resumen__pagar {
+  width: 100%;
   font-size: var(--font-size-20px);
   font-weight: 700;
   color: var(--color-fuente-claro);
