[FIX] Elimino la función submit del botón en shop versión mobile.

--- a/src/views/shop/shop.ejs
+++ b/src/views/shop/shop.ejs
@@ -13,7 +13,7 @@
                 id="search"
                 placeholder="Producto o licencia"
               />
-              <button class="filter__search--icon" type="submit">
+              <button class="filter__search--icon" type="button">
                 <img
                   src="/img/icons/search_icon.svg"
                   alt="Ícono de búsqueda"
