[FEAT] Agrego licencia Marvel con funkos, llaveros y remeras. Agrego más items en las otras licencias. Corrijo filtros del submenú en el header

--- a/src/views/shop/shop.ejs
+++ b/src/views/shop/shop.ejs
@@ -28,7 +28,7 @@
 
             <div class="filter__content--desplegable">
               <div class="filter__content">
-                <label class="filter__title" for="order">ORDENAR POR</label>
+                <label class="filter__title" for="order">CATEGORÍA</label>
                 <select class="filter__order" name="order" id="order">
                   <option value="todos">Todos</option>
                   <option value="funkos">Funkos</option>
