--- a/public/styles/pages/create-edit.css
+++ b/public/styles/pages/create-edit.css
@@ -100,6 +100,10 @@
   padding: var(--spacing-4) var(--spacing-8);
   cursor: pointer;
 }
+
+.create__error {
+  text-align: start;
+}
   
 /* ---------- Tablet Screen ---------- */
   
