--- a/src/views/admin/edit-item.ejs
+++ b/src/views/admin/edit-item.ejs
@@ -142,6 +142,14 @@
             </div>
           </div>
 
+          <% if (typeof errors != 'undefined') { %>
+            <ul>
+              <% errors.forEach(error => { %>
+              <li class="auth__error create__error"><%= error.msg %></li>
+              <% }) %>
+            </ul>
+          <% } %>
+
           <div class="create__content">
             <input
               class="create__button"
