--- a/src/views/shop/shop.ejs
+++ b/src/views/shop/shop.ejs
@@ -123,8 +123,7 @@
 
         <main class="shop">
           <ul class="shop__list">
-            <% if (filteredItems.length > 0) {
-              filteredItems.forEach(item => { %>
+            <% filteredItems.forEach(item => { %>
               <li class="shop__item">
                 <article class="card-item">
                   <a class="card-item__link" href="/shop/item/<%= item.product_id %>">
@@ -150,36 +149,7 @@
                   </a>
                 </article>
               </li>
-            <% })
-            } else {
-              items.forEach(item => { %>
-            <li class="shop__item">
-              <article class="card-item">
-                <a class="card-item__link" href="/shop/item/<%= item.product_id %>">
-                  <picture class="card-item__img">
-                    <span class="card-item__tag">NUEVO</span>
-                    <img
-                      class="card-item__img--front"
-                      src="<%= item.image_front %>"
-                      alt="<%= item.product_description %>"
-                    />
-                    <img
-                      class="card-item__img--back"
-                      src="<%= item.image_back %>"
-                      alt="<%= item.product_description %> BOX"
-                    />
-                  </picture>
-                  <div class="card-item__content">
-                    <p class="card-item__license"><%= item.licence_name %></p>
-                    <h3 class="card-item__name"><%= item.product_name %></h3>
-                    <p class="card-item__price">$ <%= item.price %></p>
-                    <p class="card-item__offer"><%= item.dues %> CUOTAS SIN INTERÉS</p>
-                  </div>
-                </a>
-              </article>
-            </li>
-            <% })
-            } %>
+            <% }) %>
           </ul>
         </main>
       </div>
