[FEAT] Agrego buscador funcional en la página de admin para buscar por código, categoría y nombre del producto. [FIX] Corrijo responsive en el shop versión mobile.

--- a/public/styles/pages/shop.css
+++ b/public/styles/pages/shop.css
@@ -137,6 +137,10 @@
     display: grid;
     grid-template-columns: 1fr;
 }
+
+.shop__item {
+    min-width: 33%;
+}
   
 /* ---------- Tablet Screen ---------- */
 
