--- a/src/views/admin/edit-item.ejs
+++ b/src/views/admin/edit-item.ejs
@@ -165,5 +165,6 @@
 
     <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
     <script src="/scripts/menu.js"></script>
+    <script src="/scripts/create-edit.js"></script>
   </body>
 </html>
