--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -15,8 +15,8 @@
               <div class="card-item__content">
                 <p class="card-item__license">Developer</p>
                 <h3 class="card-item__name">Maxi Derecho</h3>
-                <p class="card-item__price">$91218</p>
-                <p class="card-item__offer">912 CUOTAS SIN INTERÉS</p>
+                <p class="card-item__price">Buenos Aires, Argentina</p>
+                <p class="card-item__offer">maxi.derecho@gmail.com</p>
               </div>
             </a>
           </article>
