[FIX] Correciones en las vistas de login, register. Agregue fecha dinámica y no hardcodeada en el footer.

--- a/src/views/auth/login.ejs
+++ b/src/views/auth/login.ejs
@@ -39,25 +39,11 @@
 
           <div class="auth__enter">
             <input class="auth__button" type="submit" value="Ingresar" />
-
-            <div class="auth__checkbox">
-              <input
-                class="auth__checkbox--input"
-                type="checkbox"
-                name="recordarme"
-                id="recordarme"
-              />
-              <label class="auth__checkbox--label" for="recordarme">
-                Recordarme
-              </label>
-            </div>
           </div>
         </form>
 
-        <a class="auth__olvidar" href="#">Olvidé mi contraseña</a>
-
         <a class="auth__olvidar" href="/auth/register">
-          ¿No tienes una cuenta? Regístrate
+          ¿No tiene una cuenta? Regístrate
         </a>
       </section>
     </main>
