--- a/src/views/auth/register.ejs
+++ b/src/views/auth/register.ejs
@@ -80,22 +80,12 @@
 
           <div class="auth__enter">
             <input class="auth__button" type="submit" value="Registrar" />
-
-            <div class="auth__checkbox">
-              <input
-                class="auth__checkbox--input"
-                type="checkbox"
-                name="terminos"
-                id="terminos"
-                required
-              />
-              <label class="auth__checkbox--label" for="terminos">
-                Acepto
-                <a class="auth__link" href="#">Términos y Condiciones</a>
-              </label>
-            </div>
           </div>
         </form>
+
+        <a class="auth__olvidar" href="/auth/login">
+          ¿Ya tiene una cuenta? Ingrese
+        </a>
       </section>
     </main>
 
