--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -23,6 +23,7 @@
     </section>
 
     <p class="copyright container">
-      All rights reserved 2024 - Funkoshop &copy;
+      <% const date = new Date() %>
+      All rights reserved <%= date.getFullYear() %> - Funkoshop &copy;
     </p>
   </footer>
